Add APIs to prepare and unprepare a spell for a given character (#170)
